# Any-Dice-Simulator

./: .gitignore  README.md  pyproject.toml  setup.py
Any_Dice_Simulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
anyDiceSimulator/: dice.py  dieclasses.py  myfunctions.py
mypythonlib.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_dice.py  test_myfunctions.py
