[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Any Dice Simulator"
version = "0.0.1"
authors = [
  { name="Saksham Gupta", email="gupta.saksham98@gmail.com" },
]
description = "Python library to roll dice!"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"